2024幼儿园夏令营

--- a/SummerCamp/Web.config
+++ b/SummerCamp/Web.config
@@ -14,4 +14,11 @@
        <add name="School" connectionString="Data Source =172.27.100.247; Initial Catalog = School; user id = sa; password =QQpp@1100; Connection Timeout=30;"/>
   
   </connectionStrings>
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <add value="choose.aspx" />
+      </files>
+    </defaultDocument>
+  </system.webServer>
 </configuration>
